[fix] style: layout on firefox

--- a/src/main/resources/public/css/index.css
+++ b/src/main/resources/public/css/index.css
@@ -47,10 +47,14 @@
      while having main content (with page-row-expanded class) taking up all available space */
 
 html,
-body, #root { height: 100%; }
+body { height: 100%; }
+
+#root {
+    display: flex;
+    min-height: 100%;
+}
 
 body {
-    display: table;
     width: 100%;
     color: #fff !important;
 }
